--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -27,6 +27,12 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
+      <% if @current_user %>
+        Signed in as <%= @current_user.first_name %> | <%= link_to "Logout", session_url %>
+      <% else %>
+        <%= link_to 'Login', new_session_url %> | <%= link_to 'Register', new_user_url %>
+      <% end %>
+
        <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 
