--- a/app/views/carts/_emptycart.html.erb
+++ b/app/views/carts/_emptycart.html.erb
@@ -1,1 +1,3 @@
-<p>Cart is empty, please go back and fill 'er up <%= link_to 'Back to the Jungle', :root %></p>
+<div>
+<h2>Cart is empty, please go back and fill 'er up. Cheers <%= link_to 'Back to the Jungle', :root, class: 'btn btn-lg btn-primary' %></h2>
+</div>
