--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -25,6 +25,22 @@
         </dl>
       </div>
     </div>
+        <div class="col-sm-6 col-sm-offset-1">
+          <%= form_for :review, url: "/products/#{@product.id}/reviews", method: 'POST' do |form| %>
+
+            <div class="form-group">
+              <%= form.label :rating %>
+              <%= form.select :rating, [[1, 1], [2, 2], [3, 3], [4, 4], [5, 5]] %>
+            </div>
+
+            <div class="form-group">
+              <%= form.label :description %>
+              <%= form.text_area :description, class: 'form-control' %>
+            </div>
+
+            <%= form.submit 'Submit Review', class: 'btn btn-primary' %>
+          <% end %>
+        </div>
     <div class="row">
     <%= render 'review' %>
     </div>
