--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -26,11 +26,11 @@
       </div>
     </div>
         <div class="col-sm-6 col-sm-offset-1">
-          <%= form_for :review, url: "/products/#{@product.id}/reviews", method: 'POST' do |form| %>
+          <%= form_for :review, url: "/products/#{@product.id}/reviews", :method => :post do |form| %>
 
             <div class="form-group">
               <%= form.label :rating %>
-              <%= form.select :rating, [[1, 1], [2, 2], [3, 3], [4, 4], [5, 5]] %>
+              <%= form.select :rating, [[1, 1], [2, 2], [3, 3], [4, 4], [5, 5]], class: 'form-control' %>
             </div>
 
             <div class="form-group">
