--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -25,6 +25,7 @@
         </dl>
       </div>
     </div>
+      <% if current_user %>
         <div class="col-sm-6 col-sm-offset-1">
           <%= form_for :review, url: "/products/#{@product.id}/reviews", :method => :post do |form| %>
 
@@ -39,6 +40,7 @@
             </div>
 
             <%= form.submit 'Submit Review', class: 'btn btn-primary' %>
+          <% end %>
           <% end %>
         </div>
     <div class="row">
