implemented delete review button

--- a/app/views/products/_review.html.erb
+++ b/app/views/products/_review.html.erb
@@ -1,7 +1,9 @@
     <% @product.reviews.order("created_at DESC").each do |review| %>
         <% user = User.find(review.user_id) %>
+        <% logger.debug "current_user: #{review.id}" %>
         <% if review.description.blank? %>
-        <div> <%= "#{user.first_name} gave a rating of #{review.rating}/5" %> </div>
+   <div>  <%= link_to fa_icon('trash'), [review], class: 'btn btn-sm btn-danger', method: :delete, data: { confirm: "Are you sure?" } %>
+        <%= "#{user.first_name} gave a rating of #{review.rating}/5" %> </div>
         <% else %>
         <div> <%= "Review By: #{user.first_name}" %> </div>
         <div> <%= "Description: #{review.description}" %> </div>
