added styling to review section

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -75,6 +75,16 @@ main section.categories-show {
   }
 }
 
+.review-delete {
+float: right;
+}
+
+.review-submit {
+  margin-bottom: 20px;
+
+}
+
+
 main section.products-show {
 
   .product-detail {
