--- a/app/views/products/_review.html.erb
+++ b/app/views/products/_review.html.erb
@@ -1,16 +1,27 @@
     <% @product.reviews.order("created_at DESC").each do |review| %>
-      <% user = User.find(review.user_id) %>
+
+    <% user = User.find(review.user_id) %>
+<div class="container well">
+      <div class="row">
+      <div class="col-sm-12">
+        <dl class="dl-horizontal">
         <% if review.description.blank? %>
           <% if current_user.present? && current_user.id == review.user_id %>
-            <div><%= link_to fa_icon('trash'), [review], class: 'btn btn-sm btn-danger', method: :delete, data: { confirm: "Are you sure?" } %><div>
-            <% end %>
-          <div><%= "#{user.first_name} gave a rating of #{review.rating}/5" %> </div>
-        <% else %>
-          <% if current_user.present? && current_user.id == review.user_id %>
-            <div><%= link_to fa_icon('trash'), [review], class: 'btn btn-sm btn-danger', method: :delete, data: { confirm: "Are you sure?" } %></div>
-          <% end %>
-          <div> <%= "Review By: #{user.first_name}" %> </div>
-          <div> <%= "Description: #{review.description}" %> </div>
-          <div> <%= "Rating: #{review.rating}" %> </div>
+              <div><%= link_to fa_icon('trash'), [review], class: 'btn btn-sm btn-danger review-delete', method: :delete, data: { confirm: "Are you sure?" } %><div>
         <% end %>
+          <dt>Rating:</dt>
+          <dd><%= "#{user.first_name} gave a rating of #{review.rating}/5" %></dd>
+          <% else %>
+            <% if current_user.present? && current_user.id == review.user_id %>
+              <div><%= link_to fa_icon('trash'), [review], class: 'btn btn-sm btn-danger review-delete', method: :delete, data: { confirm: "Are you sure?" } %><div>
+        <% end %>
+          <dt>Rating:</dt>
+          <dd><%= "#{user.first_name} gave a rating of #{review.rating}/5" %></dd>
+          <dt>Description:</dt>
+          <dd><%= review.description %></dd>
+          <% end %>
+        </dl>
+      </div>
+    </div>
+    </div>
     <% end %>
