--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -25,6 +25,7 @@
         </dl>
       </div>
     </div>
+    <div class="container">
       <% if current_user %>
         <div class="col-sm-6 col-sm-offset-1">
           <%= form_for :review, url: "/products/#{@product.id}/reviews", :method => :post do |form| %>
@@ -39,14 +40,11 @@
               <%= form.text_area :description, class: 'form-control' %>
             </div>
 
-            <%= form.submit 'Submit Review', class: 'btn btn-primary' %>
+            <%= form.submit 'Submit Review', class: 'btn btn-primary review-submit' %>
           <% end %>
           <% end %>
         </div>
-    <div class="row">
-    <%= render 'review' %>
-    </div>
-
+        </div>
   </article>
-
+  <%= render 'review' %>
 </section>
