--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -30,7 +30,7 @@
         <% if current_user %>
           Signed in as <%= current_user.first_name %> | <%= link_to "Logout", '/logout' %>
         <% else %>
-          <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', new_user_url %>
+          <%= link_to 'Login', '/login', class: 'login' %> | <%= link_to 'Signup', new_user_url %>
         <% end %>
 
 
